[package]
name = "comb"
version = "0.1.0"
authors = ["Brandon Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
syntax-highlighting = ["syntect"]

[profile.dev]
opt-level = 3

[dependencies]
clap = "2.33.0"
crossbeam = "0.7.3"
syntect = { version = "4.1.0", optional = true }