[package]
name = "strainer"
version = "0.2.0"
authors = ["Brandon Smith"]
description = "Command-line tool for finding duplicate lines in text files"
license = "ISC"
edition = "2018"

[[bin]]
name = "strainer"
test = false
bench = false

[features]
syntax-highlighting = ["syntect"]

[profile.dev]
opt-level = 3

[dependencies]
clap = "2.33.0"
crossbeam = "0.7.3"
syntect = { version = "4.1.0", optional = true }